array.island.Island.scala.code
def island(num:Array[Int]): Int = {
  var l=0
  l=num.size
  var nbNiveaux=0
  for (k<-1 to l){
    if (num(k)>num(k-1)){
      nbNiveaux=nbNiveaux +1
    }
  }
}